dashboard wiring (#26)
* dashboard wiring

* Update to retrieve first comment and attachment